Add content to niangao.html
Added dish info, recipe steps, and image of the dish to niangao.html
body.

--- a/recipes/niangao.html
+++ b/recipes/niangao.html
@@ -7,6 +7,45 @@
         <title>Nian Gao</title>
     </head>
     <body>
-        <h1>Shanghainese Nian Gao</h1> 
+        <h1>Shanghainese Nian Gao</h1>
+        <img src="chao-nian-gao.jpg" alt="An image of a bowl of Shanghai-style stir-fried Nian Gao, served in a white bowl with a spoon resting on the bowl's left side.">
+        <h2>Description</h2>
+        <p>The Shanghai nian gao style is usually packaged in a thick soft rod to be sliced up or packaged pre-sliced and either stir-fried or added to soup. Depending on the cooking method, this style is a soft to a chewy variant. The Shanghai style keeps the nian gao white, and made with non-glutinous rice. The color is its distinct feature.</p>
+        <p>When served as a dish, the most common is the stir-fry method, hence the name (炒年糕, chǎo nián gāo). There are three general types. The first is a savory dish, common ingredients include scallions, beef, pork, cabbage, Chinese cabbage etc. The second is a sweet version using standard white sugar. The last version is taste-less, and is often consumed for its chewy textures.</p>
+        <p>This recipe will be for the first type.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Nian Gao</li>
+            <li>Nappa Cabbage</li>
+            <li>Pork (or any protein of choice)</li>
+            <li>Ginger</li>
+            <li>Garlic</li>
+            <li>Scallions</li>
+            <li>Lee Kum Kee Seasoning Soy Sauce (or any soy sauce)</li>
+            <li>Oil</li>
+            <li>Water</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Chop 2-3 stalks of scallions into small pieces.</li>
+            <li>Cut off two small slices of ginger.</li>
+            <li>Crush or mince 2-3 cloves of garlic.</li>            
+            <li>Slice your desired amount of pork or protein of choice into small, thin strips. </li>
+            <li>Marinate meat in small bowl with soy sauce, garlic, ginger, and scallions for at least 2 hours.</li>            
+            <li>Portion out how much nian gao you want and set aside in a bowl with water to soak.</li>
+            <li>Rip off how many leaves of cabbage you want. Anywhere from 3-5 usually is enough for one serving.</li>
+            <li>Chop the leaves width-wise to desired thickness.</li>
+            <li>Pour a small amount of oil into a wok or pan.</li>
+            <li>Turn on heat and set to high.</li>
+            <li>After a couple minutes, put meat in and cook until outside seared, but not cooked all the way through.</li>
+            <li>Take meat out and set aside. Put the cabbage in and cook for a few minutes or just until searing marks are visible.</li>
+            <li>Once cabbage is thoroughly cooked, drain the water from the nian gao and put in.</li>
+            <li>Add 2-3 tablespoons of soy sauce. Add more to taste if needed.</li>
+            <li>Add the partially cooked meat.</li>
+            <li>Stir fry for a couple minutes. Afterwards, pour in roughly 1-2 cups of water and cover the wok or pan.</li>
+            <li>Keep covered and let everything steam for about 5 minutes.</li>
+            <li>Lift cover and check texture of the nian gao. If it is too firm, continue steaming for a couple more minutes.</li>
+            <li>Scoop into a bowl and serve. Enjoy!</li>
+        </ol>
     </body>
 </html>
